--- a/1-3.html
+++ b/1-3.html
@@ -212,7 +212,7 @@
 				<!-- CHAT BUBBLE -->
 					<div class="flex3 pad20--bottom pad20--right">
 						<div class="flex1 brown__bg--85 vertical-center border-radius10 pad10">
-						<h1 class="unica-one h1-main brown__color--20">Which Word Best Describes Your App?</h1>
+						<h1 class="unica-one h1-main brown__color--20"><span class="h1-embiggen red__color--45">Yes!</span><br>We can build your app.</h1>
 						</div>
 					</div>
 				</div>
@@ -221,10 +221,10 @@
 				<!-- LEFT COLUMN -->
 					<div class="flex2 column">
 						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="1-3.html">
-							<p class="vollkorn choice-fontsize blue__color--85">Amazing</p>
+							<p class="vollkorn choice-fontsize blue__color--85">How will you build it?</p>
 						</a>
 						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="1-3.html">
-							<p class="vollkorn choice-fontsize blue__color--85">Disruptive</p>
+							<p class="vollkorn choice-fontsize blue__color--85">What apps have you built?</p>
 						</a>
 					</div>
 				<!-- SVG - SELECTOR -->
@@ -258,10 +258,10 @@
 				<!-- RIGHT COLUMN -->
 					<div class="flex2 column">
 						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="1-3.html">
-							<p class="vollkorn choice-fontsize blue__color--85">Professional</p>
+							<p class="vollkorn choice-fontsize blue__color--85">What platforms do you know?</p>
 						</a>
 						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="1-3.html">
-							<p class="vollkorn choice-fontsize blue__color--85">Award-Winning</p>
+							<p class="vollkorn choice-fontsize blue__color--85">Let's get started!</p>
 						</a>
 					</div>
 				</div>
