--- a/1-3.html
+++ b/1-3.html
@@ -2,8 +2,8 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
-	<title>Tell Us About the App You Want</title>
-	<meta name="description" content="At Dapper Gentlemen we love making apps. We dream about code displayed in harmonious color palletes.">
+	<title>We Can Build Your Next App</title>
+	<meta name="description" content="At Dapper Gentlemen we can build you any app you want.">
 	<link rel="stylesheet" href="style/css/style.css">
 	<link href='http://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Unica+One' rel='stylesheet' type='text/css'>
