ideation in comments about water

--- a/1-1.html
+++ b/1-1.html
@@ -388,7 +388,7 @@
 						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="1-2.html">
 							<p class="vollkorn choice-fontsize blue__color--85">Can you make my app?</p>
 						</a>
-						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="#">
+						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="2-1.html">
 							<p class="vollkorn choice-fontsize blue__color--85">How are apps made?</p>
 						</a>
 					</div>
