--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
 				<div class="flex1 choice-orientation blue__inner-shadow--20 blue__bg--30 pad10 border-radius5"> <!-- CHOICE WRAPER AND BG -->
 				<!-- LEFT COLUMN -->
 					<div class="flex2 column">
-						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="who-can-build-my-app.html">
+						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="describe-your-app-idea.html">
 							<p class="vollkorn choice-fontsize blue__color--85">Can you make my app?</p>
 						</a>
 						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="2-1.html">
