--- a/yes-we-can-build-that.html
+++ b/yes-we-can-build-that.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
-	<title>We Can Build Your Next App</title>
+	<title>We Will Build Your Next App</title>
 	<meta name="description" content="At Dapper Gentlemen we can build you any app you want.">
 	<link rel="stylesheet" href="style/css/style.css">
 	<link href='http://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
@@ -220,7 +220,7 @@
 				<div class="flex1 choice-orientation blue__inner-shadow--20 blue__bg--30 pad10 border-radius5"> <!-- CHOICE WRAPER AND BG -->
 				<!-- LEFT COLUMN -->
 					<div class="flex2 column">
-						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="2-1.html">
+						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="how-are-apps-made.html">
 							<p class="vollkorn choice-fontsize blue__color--85">How will you build it?</p>
 						</a>
 						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="1-3.html">
