--- a/you-are-amazing.html
+++ b/you-are-amazing.html
@@ -2,8 +2,8 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
-	<title>Turning Your App Dreams Into A Reality</title>
-	<meta name="description" content="At Dapper Gentlemen our passion is turning your dreams into reality.">
+	<title>We Love Working With Amazing People</title>
+	<meta name="description" content="Amazing people have amazing ideas. At Dapper Gentlemen we love working with amazing ideas.">
 	<link rel="stylesheet" href="style/css/style.css">
 	<link href='http://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Unica+One' rel='stylesheet' type='text/css'>
