confusing dream section linked and contentented

--- a/how-are-apps-made.html
+++ b/how-are-apps-made.html
@@ -388,7 +388,7 @@
 						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="you-are-amazing.html">
 							<p class="vollkorn choice-fontsize blue__color--85">My dream is amazing.</p>
 						</a>
-						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="#">
+						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="your-idea-is-great.html">
 							<p class="vollkorn choice-fontsize blue__color--85">My dream is confusing.</p>
 						</a>
 					</div>
