--- a/your-idea-is-great.html
+++ b/your-idea-is-great.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
-	<title>We Love Working With Amazing People</title>
+	<title>Great Ideas Are Complex</title>
 	<meta name="description" content="Amazing people have amazing ideas. At Dapper Gentlemen we love working with amazing ideas.">
 	<link rel="stylesheet" href="style/css/style.css">
 	<link href='http://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
@@ -200,7 +200,7 @@
 				<!-- CHAT BUBBLE -->
 					<div class="flex2 pad20--bottom">
 						<div class="flex1 brown__bg--85 vertical-center border-radius10 pad10">
-						<h1 class="unica-one h1-main brown__color--20">Amazing people have amazing ideas.</h1>
+						<h1 class="unica-one h1-main brown__color--20">Great ideas are like great people, they are complex. We simplify the complex.</h1>
 						</div>
 					</div>
 				<!-- SVG - RYAN -->
