--- a/process.html
+++ b/process.html
@@ -8,40 +8,43 @@
 	<link href='http://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Unica+One' rel='stylesheet' type='text/css'>
 </head>
-<h2>Design Docs</h2>
-a. Brainstorm Lists of Features
-b. Organize Features into Versions
-c. Client buy-in
-2. UX
-a. Research
-b. Wireframing
-c. Mockups for testing
-3. UI
-a. Research
-b. Ideation and Mockups
-c. Design
-4. Dev Research (what is this called?)
-a. Determine System Architecture
-b. Estimate Development Days Per Feature
-5. Backend Development
-a. Determine Appropriate Hosting Solutions
-b. Deploy Code to Servers
-6. APIS
-a. Determine requirements for required API's
-b. Integrate API’s
-7. iOS Frontend
-a. Make basic Feature Sets
-b. Once Functional, polish and integrate design
-8. Android Frontend
-a. Make basic Feature Sets
-b. Once Functional, polish and integrate design
-9. Testing and QA
-a. Design Review
-b. Test for bugs
-10. Launch
-a. Marketing
-b. Mor Marketing
-c. Seriously Marketing
-11. Post Launch Support
-a. Bug squashing
-b. New feature development
+<h1>A Typical App Design and Development Process</h1>
+	<h2>Design Docs</h2>
+		<h3>Brainstorm Lists of Features</h3>
+		<h3>Organize Features into Versions</h3>
+
+	<h2>UX</h2>
+		<h3>Research</h3>
+		<h3>Wireframing</h3>
+		<h3>Mockups for testing</h3>
+
+	<h2>UI</h2>
+		<h3>Research</h3>
+		<h3>Ideation</h3>
+		<h3>Mockups</h3>
+		<h3>Design</h3>
+		<h3>Iteration</h3>
+
+	<h2>Dev Docs</h2>
+		<h3>Research</h3>
+		<h3>Determine System Architecture</h3>
+		<h3>Estimate Milestones</h3>
+
+	<h2>Backend Development</h2>
+		<h3>Set Up Servers</h3>
+		<h3>Develop and Deploy Code to Servers</h3>
+
+	<h2>APIs</h2>
+		<h3>Research Requirements for APIs</h3>
+		<h3>Build and Integrate APIs</h3>
+
+	<h2>Develop Required Frontends</h2>
+		<h3>iOS (iPhone, iPad)</h3>
+		<h3>Android (Phone, Tablets)</h3>
+		<h3>Web</h3>
+		<h3>Desktop</h3>
+
+	<h2>Quality Assurance and Polish</h2>
+	<h2>Launch</h2>
+	<h2>Post Launch Updates and Support</h2>
+	
