linking together a conversation is tricky and amazing

--- a/app-design-and-development-process.html
+++ b/app-design-and-development-process.html
@@ -2,8 +2,8 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
-	<title>Great Ideas Are Complex</title>
-	<meta name="description" content="Amazing people have amazing ideas. At Dapper Gentlemen we love working with amazing ideas.">
+	<title>A Typical App Process</title>
+	<meta name="description" content="Every app is different, however, here is a typical app process">
 	<link rel="stylesheet" href="style/css/style.css">
 	<link href='http://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Unica+One' rel='stylesheet' type='text/css'>
@@ -199,8 +199,46 @@
 					</svg>
 				<!-- CHAT BUBBLE -->
 					<div class="flex2 pad20--bottom">
-						<div class="flex1 brown__bg--85 vertical-center border-radius10 pad10">
-						<h1 class="unica-one h1-main brown__color--20">Great ideas are like great people, they are complex. We simplify the complex.</h1>
+						<div class="flex1 brown__bg--85 vertical-center border-radius10 pad10 unica-one h1-main brown__color--20">
+							<h1>A Typical App Design and Development Process</h1>
+								<h2>Design Docs</h2>
+									<h3>Brainstorm Lists of Features</h3>
+									<h3>Organize Features into Versions</h3>
+
+								<h2>UX</h2>
+									<h3>Research</h3>
+									<h3>Wireframing</h3>
+									<h3>Mockups for testing</h3>
+
+								<h2>UI</h2>
+									<h3>Research</h3>
+									<h3>Ideation</h3>
+									<h3>Mockups</h3>
+									<h3>Design</h3>
+									<h3>Iteration</h3>
+
+								<h2>Dev Docs</h2>
+									<h3>Research</h3>
+									<h3>Determine System Architecture</h3>
+									<h3>Estimate Milestones</h3>
+
+								<h2>Backend Development</h2>
+									<h3>Set Up Servers</h3>
+									<h3>Develop and Deploy Code to Servers</h3>
+
+								<h2>APIs</h2>
+									<h3>Research Requirements for APIs</h3>
+									<h3>Build and Integrate APIs</h3>
+
+								<h2>Develop Required Frontends</h2>
+									<h3>iOS (iPhone, iPad)</h3>
+									<h3>Android (Phone, Tablets)</h3>
+									<h3>Web</h3>
+									<h3>Desktop</h3>
+
+								<h2>Quality Assurance and Polish</h2>
+								<h2>Launch</h2>
+								<h2>Post Launch Updates and Support</h2>
 						</div>
 					</div>
 				<!-- SVG - RYAN -->
@@ -384,9 +422,43 @@
 			<!-- CHOICES -->
 				<div class="flex1 choice-orientation blue__inner-shadow--20 blue__bg--30 pad10 border-radius5"> <!-- CHOICE WRAPER AND BG -->
 				<!-- LEFT COLUMN -->
-					<div class="flex1 column">
-						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="app-design-and-development-process.html">
-							<p class="vollkorn choice-fontsize blue__color--85">I agree. How will you build my great idea?</p>
+					<div class="flex2 column">
+						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="dappergentlemen-is-amazing.html">
+							<p class="vollkorn choice-fontsize blue__color--85">Is your work amazing?</p>
+						</a>
+					</div>
+				<!-- SVG - SELECTOR -->
+					<svg
+						version="1.1"
+						id="bioware-style-selector"
+						class="flex1 hide"
+						xmlns="http://www.w3.org/2000/svg"
+						xmlns:xlink="http://www.w3.org/1999/xlink"
+						x="0px"
+						y="0px"
+						viewBox="0 0 1000 1000"
+						enable-background="new 0 0 1000 1000"
+						xml:space="preserve"
+					>
+						<path
+							id="selector-outside"
+							class="blue__fill--35"
+							d="M280,166l-134-19l20,133c-87,133-87,306,0,439l-19,134l133-19c133,87,306,87,439,0
+						l134,19l-19-133c87-133,87-306,0-439l19-134l-133,19C587,78,413,78,280,166z M712,288c117,117,117,307,0,424c-117,117-307,117-424,0
+						s-117-307,0-424S595,171,712,288z"
+						/>
+						<circle
+							id="selector-inside"
+							class="blue__fill--33"
+							cx="500"
+							cy="500"
+							r="150"
+						/>
+					</svg>
+				<!-- RIGHT COLUMN -->
+					<div class="flex2 column">
+						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="lets-get-started.html">
+							<p class="vollkorn choice-fontsize blue__color--85">Let's get started!</p>
 						</a>
 					</div>
 				</div>
