--- a/yes-we-can-build-that.html
+++ b/yes-we-can-build-that.html
@@ -224,7 +224,7 @@
 							<p class="vollkorn choice-fontsize blue__color--85">How will you build it?</p>
 						</a>
 						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="1-3.html">
-							<p class="vollkorn choice-fontsize blue__color--85">What apps have you built?</p>
+							<p class="vollkorn choice-fontsize blue__color--85">How good is your work?</p>
 						</a>
 					</div>
 				<!-- SVG - SELECTOR -->
@@ -258,9 +258,9 @@
 				<!-- RIGHT COLUMN -->
 					<div class="flex2 column">
 						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="1-3.html">
-							<p class="vollkorn choice-fontsize blue__color--85">What platforms do you know?</p>
+							<p class="vollkorn choice-fontsize blue__color--85">What is your favorite drink?</p>
 						</a>
-						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="1-3.html">
+						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="lets-get-started.html">
 							<p class="vollkorn choice-fontsize blue__color--85">Let's get started!</p>
 						</a>
 					</div>
