--- a/you-are-amazing.html
+++ b/you-are-amazing.html
@@ -385,8 +385,8 @@
 				<div class="flex1 choice-orientation blue__inner-shadow--20 blue__bg--30 pad10 border-radius5"> <!-- CHOICE WRAPER AND BG -->
 				<!-- LEFT COLUMN -->
 					<div class="flex1 column">
-						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="1-2.html">
-							<p class="vollkorn choice-fontsize blue__color--85">I agree. What will you do with my amazing idea?</p>
+						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="app-design-and-development-process.html">
+							<p class="vollkorn choice-fontsize blue__color--85">I agree. How will you build my amazing idea?</p>
 						</a>
 					</div>
 				</div>
