index updated to match mindmap

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 				<!-- CHAT BUBBLE -->
 					<div class="flex2 pad20--bottom">
 						<div class="flex1 brown__bg--85 vertical-center border-radius10 pad10">
-						<h1 class="unica-one h1-main brown__color--20">We make amazing apps</h1>
+						<h1 class="unica-one h1-main brown__color--20">We make amazing apps!</h1>
 						</div>
 					</div>
 				<!-- SVG - RYAN -->
@@ -386,10 +386,10 @@
 				<!-- LEFT COLUMN -->
 					<div class="flex2 column">
 						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="describe-your-app-idea.html">
-							<p class="vollkorn choice-fontsize blue__color--85">Can you make my app?</p>
+							<p class="vollkorn choice-fontsize blue__color--85">You make apps?</p>
 						</a>
 						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="how-are-apps-made.html">
-							<p class="vollkorn choice-fontsize blue__color--85">How are apps made?</p>
+							<p class="vollkorn choice-fontsize blue__color--85">Can you make my app?</p>
 						</a>
 					</div>
 				<!-- SVG - SELECTOR -->
@@ -423,7 +423,7 @@
 				<!-- RIGHT COLUMN -->
 					<div class="flex2 column">
 						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="#">
-							<p class="vollkorn choice-fontsize blue__color--85">Are you guys any good?</p>
+							<p class="vollkorn choice-fontsize blue__color--85">I'm looking for an adventure.</p>
 						</a>
 						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="lets-get-started.html">
 							<p class="vollkorn choice-fontsize blue__color--85">Can I contact you?</p>
