--- a/what-kind-of-apps-do-you-make.html
+++ b/what-kind-of-apps-do-you-make.html
@@ -200,7 +200,7 @@
 				<!-- CHAT BUBBLE -->
 					<div class="flex2 pad20--bottom">
 						<div class="flex1 brown__bg--85 vertical-center border-radius10 pad10">
-						<h1 class="unica-one h1-main brown__color--20">We make amazing apps!</h1>
+						<h1 class="unica-one h1-main brown__color--20">Indeed. We make apps with unbelievable user interfaces, diligant development and tedious testing.</h1>
 						</div>
 					</div>
 				<!-- SVG - RYAN -->
@@ -385,11 +385,8 @@
 				<div class="flex1 choice-orientation blue__inner-shadow--20 blue__bg--30 pad10 border-radius5"> <!-- CHOICE WRAPER AND BG -->
 				<!-- LEFT COLUMN -->
 					<div class="flex2 column">
-						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="what-kind-of-apps-do-you-make.html">
-							<p class="vollkorn choice-fontsize blue__color--85">You make apps?</p>
-						</a>
-						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="how-are-apps-made.html">
-							<p class="vollkorn choice-fontsize blue__color--85">Can you make my app?</p>
+						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="describe-your-app-idea.html">
+							<p class="vollkorn choice-fontsize blue__color--85">I have an idea for an app.</p>
 						</a>
 					</div>
 				<!-- SVG - SELECTOR -->
@@ -423,10 +420,10 @@
 				<!-- RIGHT COLUMN -->
 					<div class="flex2 column">
 						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="adventure.html">
-							<p class="vollkorn choice-fontsize blue__color--85">I'm looking for an adventure.</p>
+							<p class="vollkorn choice-fontsize blue__color--85">About that adventure?</p>
 						</a>
 						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="lets-get-started.html">
-							<p class="vollkorn choice-fontsize blue__color--85">Can I contact you?</p>
+							<p class="vollkorn choice-fontsize blue__color--85">We should talk.</p>
 						</a>
 					</div>
 				</div>
