--- a/adventure.html
+++ b/adventure.html
@@ -2,8 +2,9 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
-	<title>We Make Amazing Apps at Dapper Gentlemen</title>
-	<meta name="description" content="At Dapper Gentlemen, we know mobile design and development can be complex for startups and enterprise companies. Learn how we make it simple.">
+	<title>Who doesn't love a fantastical adventure?</title>
+	<meta name="author" content="Ryan Allen">
+	<meta name="description"content="What mysteries lurk around the next turn?">
 	<link rel="stylesheet" href="style/css/style.css">
 	<link href='http://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Unica+One' rel='stylesheet' type='text/css'>
@@ -200,7 +201,7 @@
 				<!-- CHAT BUBBLE -->
 					<div class="flex2 pad20--bottom">
 						<div class="flex1 brown__bg--85 vertical-center border-radius10 pad10">
-						<h1 class="unica-one h1-main brown__color--20">We make amazing apps!</h1>
+						<h1 class="unica-one h1-main brown__color--20">I may have a quest for you later...</h1>
 						</div>
 					</div>
 				<!-- SVG - RYAN -->
@@ -385,11 +386,11 @@
 				<div class="flex1 choice-orientation blue__inner-shadow--20 blue__bg--30 pad10 border-radius5"> <!-- CHOICE WRAPER AND BG -->
 				<!-- LEFT COLUMN -->
 					<div class="flex2 column">
-						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="what-kind-of-apps-do-you-make.html">
-							<p class="vollkorn choice-fontsize blue__color--85">You make apps?</p>
+						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="index.html">
+							<p class="vollkorn choice-fontsize blue__color--85">I hope robots are involved.</p>
 						</a>
-						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="how-are-apps-made.html">
-							<p class="vollkorn choice-fontsize blue__color--85">Can you make my app?</p>
+						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="index.html">
+							<p class="vollkorn choice-fontsize blue__color--85">I hope it has dragons.</p>
 						</a>
 					</div>
 				<!-- SVG - SELECTOR -->
@@ -422,11 +423,11 @@
 					</svg>
 				<!-- RIGHT COLUMN -->
 					<div class="flex2 column">
-						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="adventure.html">
-							<p class="vollkorn choice-fontsize blue__color--85">I'm looking for an adventure.</p>
+						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="index.html">
+							<p class="vollkorn choice-fontsize blue__color--85">I hope it has cookies!</p>
 						</a>
-						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="lets-get-started.html">
-							<p class="vollkorn choice-fontsize blue__color--85">Can I contact you?</p>
+						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="http://articles.dappergentlemen.com">
+							<p class="vollkorn choice-fontsize blue__color--85">Do you have a blog?</p>
 						</a>
 					</div>
 				</div>
