adventure description update

--- a/adventure.html
+++ b/adventure.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Who doesn't love a fantastical adventure?</title>
 	<meta name="author" content="Ryan Allen">
-	<meta name="description"content="What mysteries lurk around the next turn?">
+	<meta name="description"content="What mysteries lurk beyond your next click?">
 	<link rel="stylesheet" href="style/css/style.css">
 	<link href='http://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Unica+One' rel='stylesheet' type='text/css'>
