longer content but more human sounding

--- a/adventure.html
+++ b/adventure.html
@@ -201,7 +201,7 @@
 				<!-- CHAT BUBBLE -->
 					<div class="flex2 pad20--bottom">
 						<div class="flex1 brown__bg--85 vertical-center border-radius10 pad10">
-						<h1 class="unica-one h1-main brown__color--20">You look like a brave soul. I may have a quest for you later...</h1>
+						<h1 class="unica-one h1-main brown__color--20">You look like a brave soul. Check back later, I may have a quest for you.</h1>
 						</div>
 					</div>
 				<!-- SVG - RYAN -->
