updated choices content

--- a/adventure.html
+++ b/adventure.html
@@ -387,7 +387,7 @@
 				<!-- LEFT COLUMN -->
 					<div class="flex2 column">
 						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="index.html">
-							<p class="vollkorn choice-fontsize blue__color--85">I hope robots are involved.</p>
+							<p class="vollkorn choice-fontsize blue__color--85">There had better be robots.</p>
 						</a>
 						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="index.html">
 							<p class="vollkorn choice-fontsize blue__color--85">I hope it has dragons.</p>
@@ -424,10 +424,10 @@
 				<!-- RIGHT COLUMN -->
 					<div class="flex2 column">
 						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="index.html">
-							<p class="vollkorn choice-fontsize blue__color--85">I hope it has cookies!</p>
+							<p class="vollkorn choice-fontsize blue__color--85">I'm brave and attractive.</p>
 						</a>
 						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="http://articles.dappergentlemen.com">
-							<p class="vollkorn choice-fontsize blue__color--85">Do you have a blog?</p>
+							<p class="vollkorn choice-fontsize blue__color--85">I want to read something good.</p>
 						</a>
 					</div>
 				</div>
