--- a/adventure.html
+++ b/adventure.html
@@ -427,7 +427,7 @@
 							<p class="vollkorn choice-fontsize blue__color--85">I'm brave and attractive.</p>
 						</a>
 						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="http://articles.dappergentlemen.com">
-							<p class="vollkorn choice-fontsize blue__color--85">I want to read something good.</p>
+							<p class="vollkorn choice-fontsize blue__color--85">I want to read something interesting.</p>
 						</a>
 					</div>
 				</div>
