--- a/describe-your-app-idea.html
+++ b/describe-your-app-idea.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
-	<title>Tell Us About the App You Want</title>
+	<title>Tell Us About Your App Idea</title>
 	<meta name="description" content="At Dapper Gentlemen we love making apps. We dream about code displayed in harmonious color palletes.">
 	<link rel="stylesheet" href="style/css/style.css">
 	<link href='http://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
@@ -200,7 +200,7 @@
 				<!-- CHAT BUBBLE -->
 					<div class="flex2 pad20--bottom">
 						<div class="flex1 brown__bg--85 vertical-center border-radius10 pad10">
-						<h1 class="unica-one h1-main brown__color--20">What best describes your app idea?</h1>
+						<h1 class="unica-one h1-main brown__color--20">Summarize your app idea.</h1>
 						</div>
 					</div>
 				<!-- SVG - RYAN -->
