updated meta desc

--- a/describe-your-app-idea.html
+++ b/describe-your-app-idea.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Tell Us About Your App Idea</title>
-	<meta name="description" content="At Dapper Gentlemen we love making apps. We dream about code displayed in harmonious color palletes.">
+	<meta name="description" content="We want to hear everything you can tell us about the app you want to build. The more the better.">
 	<link rel="stylesheet" href="style/css/style.css">
 	<link href='http://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Unica+One' rel='stylesheet' type='text/css'>
