--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>We Make Amazing Apps at Dapper Gentlemen</title>
-	<meta name="description" content="At Dapper Gentlemen, we know mobile design and development can be complex for startups and enterprise companies. Learn how we make it simple.">
+	<meta name="description" content="At Dapper Gentlemen, we are advancing mobile design and development in exciting ways. Be a part of it with us.">
 	<link rel="stylesheet" href="style/css/style.css">
 	<link href='http://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Unica+One' rel='stylesheet' type='text/css'>
@@ -200,7 +200,7 @@
 				<!-- CHAT BUBBLE -->
 					<div class="flex2 pad20--bottom">
 						<div class="flex1 brown__bg--85 vertical-center border-radius10 pad10">
-						<h1 class="unica-one h1-main brown__color--20">We make amazing apps!</h1>
+						<h1 class="unica-one h1-main brown__color--20">We build magical apps!</h1>
 						</div>
 					</div>
 				<!-- SVG - RYAN -->
@@ -386,7 +386,7 @@
 				<!-- LEFT COLUMN -->
 					<div class="flex2 column">
 						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="what-kind-of-apps-do-you-make.html">
-							<p class="vollkorn choice-fontsize blue__color--85">You make apps?</p>
+							<p class="vollkorn choice-fontsize blue__color--85">So, you make apps?</p>
 						</a>
 						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="how-are-apps-made.html">
 							<p class="vollkorn choice-fontsize blue__color--85">Can you make my app?</p>
@@ -423,7 +423,7 @@
 				<!-- RIGHT COLUMN -->
 					<div class="flex2 column">
 						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="adventure.html">
-							<p class="vollkorn choice-fontsize blue__color--85">I'm looking for an adventure.</p>
+							<p class="vollkorn choice-fontsize blue__color--85">I'm questing for adventure!</p>
 						</a>
 						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="lets-get-started.html">
 							<p class="vollkorn choice-fontsize blue__color--85">Can I contact you?</p>
