more magical title

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
-	<title>We Make Amazing Apps at Dapper Gentlemen</title>
-	<meta name="description" content="At Dapper Gentlemen, we are advancing mobile design and development in exciting ways. Be a part of it with us.">
+	<title>We Build Magical Apps at Dapper Gentlemen</title>
+	<meta name="description" content="At Dapper Gentlemen, we are advancing mobile design and development in magical ways. Be a part of it with us.">
 	<link rel="stylesheet" href="style/css/style.css">
 	<link href='http://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Unica+One' rel='stylesheet' type='text/css'>
