--- a/lets-get-started.html
+++ b/lets-get-started.html
@@ -2,8 +2,8 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
-	<title>Tell Us About the App You Want</title>
-	<meta name="description" content="At Dapper Gentlemen we love making apps. We dream about code displayed in harmonious color palletes.">
+	<title>Contact Dapper Gentlemen About Your Next App</title>
+	<meta name="description" content="Tell us what you desire and we will make it yours.">
 	<link rel="stylesheet" href="style/css/style.css">
 	<link href='http://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Unica+One' rel='stylesheet' type='text/css'>
@@ -15,7 +15,7 @@
 		<div class="flex1 blue__bg--40 pad7 column blue__drop-shadow--10 border-radius10"> <!-- Scene and Choices Wrapper -->
 			<div class="flex1 column">
 			<!-- SCENE -->
-				<div class="flex2 overflow-hidden"> <!-- Overflow affects every flexbox in scene -->
+				<div class="flex1 overflow-hidden"> <!-- Overflow affects every flexbox in scene -->
 				<!-- SVG - JO -->
 					<svg
 						version="1.2"
@@ -200,7 +200,7 @@
 				<!-- CHAT BUBBLE -->
 					<div class="flex2 pad20--bottom">
 						<div class="flex1 brown__bg--85 vertical-center border-radius10 pad10">
-						<h1 class="unica-one h1-main brown__color--20">Email us. Attach photos of tulips.</h1>
+						<h1 class="unica-one h1-main brown__color--20">Tell us your idea and let's plan out building it together.</h1>
 						</div>
 					</div>
 				<!-- SVG - RYAN -->
@@ -382,7 +382,7 @@
 					</svg>
 				</div>
 			<!-- CHOICES -->
-				<div class="flex1 choice-orientation blue__inner-shadow--20 blue__bg--30 pad10 border-radius5"> <!-- CHOICE WRAPER AND BG -->
+				<div class="flex2 choice-orientation blue__inner-shadow--20 blue__bg--30 pad10 border-radius5"> <!-- CHOICE WRAPER AND BG -->
 				<!-- LEFT COLUMN -->
 					<div class="flex2 column">
 						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="#">
