fixed broken link

--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
 						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="what-kind-of-apps-do-you-make.html">
 							<p class="vollkorn choice-fontsize blue__color--85">So, you make apps?</p>
 						</a>
-						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="how-are-apps-made.html">
+						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="describe-your-app-idea.html">
 							<p class="vollkorn choice-fontsize blue__color--85">Can you make my app?</p>
 						</a>
 					</div>
