edited title, desc, and h1

--- a/what-kind-of-apps-do-you-make.html
+++ b/what-kind-of-apps-do-you-make.html
@@ -2,8 +2,8 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
-	<title>We Make Amazing Apps at Dapper Gentlemen</title>
-	<meta name="description" content="At Dapper Gentlemen, we know mobile design and development can be complex for startups and enterprise companies. Learn how we make it simple.">
+	<title>Our Magical Apps at Dapper Gentlemen</title>
+	<meta name="description" content="At Dapper Gentlemen, we are advancing mobile design and development in magical ways. Be a part of it with us.">
 	<link rel="stylesheet" href="style/css/style.css">
 	<link href='http://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Unica+One' rel='stylesheet' type='text/css'>
@@ -200,7 +200,7 @@
 				<!-- CHAT BUBBLE -->
 					<div class="flex2 pad20--bottom">
 						<div class="flex1 brown__bg--85 vertical-center border-radius10 pad10">
-						<h1 class="unica-one h1-main brown__color--20">Indeed. We make apps with unbelievable user interfaces, diligant development and tedious testing.</h1>
+						<h1 class="unica-one h1-main brown__color--20">Indeed, with unbelievable user interfaces, diligant development and tedious testing.</h1>
 						</div>
 					</div>
 				<!-- SVG - RYAN -->
