mediaquery update to fix text expanding

--- a/adventure.html
+++ b/adventure.html
@@ -6,7 +6,7 @@
 	<meta name="author" content="Ryan Allen">
 	<meta name="description"content="What mysteries lurk beyond your next click?">
 	<link rel="stylesheet" href="style/css/style.css">
-	<link href='http://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Unica+One' rel='stylesheet' type='text/css'>
 </head>
 
@@ -387,10 +387,10 @@
 				<!-- LEFT COLUMN -->
 					<div class="flex2 column">
 						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="index.html">
-							<p class="vollkorn choice-fontsize blue__color--85">There had better be robots.</p>
+							<p class="choice-font choice-fontsize blue__color--85">There had better be robots.</p>
 						</a>
 						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="index.html">
-							<p class="vollkorn choice-fontsize blue__color--85">I hope it has dragons.</p>
+							<p class="choice-font choice-fontsize blue__color--85">I hope it has dragons.</p>
 						</a>
 					</div>
 				<!-- SVG - SELECTOR -->
@@ -424,10 +424,10 @@
 				<!-- RIGHT COLUMN -->
 					<div class="flex2 column">
 						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="index.html">
-							<p class="vollkorn choice-fontsize blue__color--85">I'm brave and attractive.</p>
+							<p class="choice-font choice-fontsize blue__color--85">I'm brave and attractive.</p>
 						</a>
 						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="http://articles.dappergentlemen.com">
-							<p class="vollkorn choice-fontsize blue__color--85">I want to read something.</p>
+							<p class="choice-font choice-fontsize blue__color--85">I want to read something.</p>
 						</a>
 					</div>
 				</div>
