--- a/describe-your-app-idea.html
+++ b/describe-your-app-idea.html
@@ -5,7 +5,7 @@
 	<title>Tell Us About Your App Idea</title>
 	<meta name="description" content="We want to hear everything you can tell us about the app you want to build. The more the better.">
 	<link rel="stylesheet" href="style/css/style.css">
-	<link href='http://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Unica+One' rel='stylesheet' type='text/css'>
 </head>
 
@@ -200,7 +200,7 @@
 				<!-- CHAT BUBBLE -->
 					<div class="flex2 pad20--bottom">
 						<div class="flex1 brown__bg--85 vertical-center border-radius10 pad10">
-						<h1 class="unica-one h1-main brown__color--20">Tell me your app idea.</h1>
+						<h1 class="chat-font h1-main brown__color--20">Tell me your app idea.</h1>
 						</div>
 					</div>
 				<!-- SVG - RYAN -->
@@ -386,10 +386,10 @@
 				<!-- LEFT COLUMN -->
 					<div class="flex2 column">
 						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="yes-we-can-build-your-app.html">
-							<p class="vollkorn choice-fontsize blue__color--85">It's Award-Winning!</p>
+							<p class="choice-font choice-fontsize blue__color--85">It's Award-Winning!</p>
 						</a>
 						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="yes-we-can-build-your-app.html">
-							<p class="vollkorn choice-fontsize blue__color--85">It's Professional.</p>
+							<p class="choice-font choice-fontsize blue__color--85">It's Professional.</p>
 						</a>
 					</div>
 				<!-- SVG - SELECTOR -->
@@ -423,10 +423,10 @@
 				<!-- RIGHT COLUMN -->
 					<div class="flex2 column">
 						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="yes-we-can-build-your-app.html">
-							<p class="vollkorn choice-fontsize blue__color--85">It's Disruptive!</p>
+							<p class="choice-font choice-fontsize blue__color--85">It's Disruptive!</p>
 						</a>
 						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="lets-get-started.html">
-							<p class="vollkorn choice-fontsize blue__color--85">It's Behind-Schedule...</p>
+							<p class="choice-font choice-fontsize blue__color--85">It's Behind-Schedule...</p>
 						</a>
 					</div>
 				</div>
