--- a/lets-get-started.html
+++ b/lets-get-started.html
@@ -5,7 +5,7 @@
 	<title>Contact Dapper Gentlemen About Your Next App</title>
 	<meta name="description" content="Tell us what you desire and we will make it yours.">
 	<link rel="stylesheet" href="style/css/style.css">
-	<link href='http://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Unica+One' rel='stylesheet' type='text/css'>
 </head>
 
@@ -200,7 +200,7 @@
 				<!-- CHAT BUBBLE -->
 					<div class="flex2 pad20--bottom">
 						<div class="flex1 brown__bg--85 vertical-center border-radius10 pad10">
-						<h1 class="unica-one h1-main brown__color--20">Tell us your idea and let's plan out building it together.</h1>
+						<h1 class="chat-font h1-main brown__color--20">Tell us your idea and let's plan out building it together.</h1>
 						</div>
 					</div>
 				<!-- SVG - RYAN -->
@@ -386,10 +386,10 @@
 				<!-- LEFT COLUMN -->
 					<div class="flex2 column">
 						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="#">
-							<p class="vollkorn choice-fontsize blue__color--85">...</p>
+							<p class="choice-font choice-fontsize blue__color--85">...</p>
 						</a>
 						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="#">
-							<p class="vollkorn choice-fontsize blue__color--85">...</p>
+							<p class="choice-font choice-fontsize blue__color--85">...</p>
 						</a>
 					</div>
 				<!-- SVG - SELECTOR -->
@@ -423,10 +423,10 @@
 				<!-- RIGHT COLUMN -->
 					<div class="flex2 column">
 						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="#">
-							<p class="vollkorn choice-fontsize blue__color--85">...</p>
+							<p class="choice-font choice-fontsize blue__color--85">...</p>
 						</a>
 						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="#">
-							<p class="vollkorn choice-fontsize blue__color--85">...</p>
+							<p class="choice-font choice-fontsize blue__color--85">...</p>
 						</a>
 					</div>
 				</div>
