--- a/what-kind-of-apps-do-you-make.html
+++ b/what-kind-of-apps-do-you-make.html
@@ -5,7 +5,7 @@
 	<title>Our Magical Apps at Dapper Gentlemen</title>
 	<meta name="description" content="At Dapper Gentlemen, we are advancing mobile design and development in magical ways. Be a part of it with us.">
 	<link rel="stylesheet" href="style/css/style.css">
-	<link href='http://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Unica+One' rel='stylesheet' type='text/css'>
 </head>
 
@@ -200,7 +200,7 @@
 				<!-- CHAT BUBBLE -->
 					<div class="flex2 pad20--bottom">
 						<div class="flex1 brown__bg--85 vertical-center border-radius10 pad10">
-						<h1 class="unica-one h1-main brown__color--20">Indeed, with unbelievable user interfaces, diligant development and tedious testing.</h1>
+						<h1 class="chat-font h1-main brown__color--20">Indeed, with unbelievable user interfaces, diligant development and tedious testing.</h1>
 						</div>
 					</div>
 				<!-- SVG - RYAN -->
@@ -386,7 +386,7 @@
 				<!-- LEFT COLUMN -->
 					<div class="flex2 column">
 						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="describe-your-app-idea.html">
-							<p class="vollkorn choice-fontsize blue__color--85">I have an idea for an app.</p>
+							<p class="choice-font choice-fontsize blue__color--85">I have an idea for an app.</p>
 						</a>
 					</div>
 				<!-- SVG - SELECTOR -->
@@ -420,10 +420,10 @@
 				<!-- RIGHT COLUMN -->
 					<div class="flex2 column">
 						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="adventure.html">
-							<p class="vollkorn choice-fontsize blue__color--85">About that adventure?</p>
+							<p class="choice-font choice-fontsize blue__color--85">About that adventure?</p>
 						</a>
 						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="lets-get-started.html">
-							<p class="vollkorn choice-fontsize blue__color--85">We should talk.</p>
+							<p class="choice-font choice-fontsize blue__color--85">We should talk.</p>
 						</a>
 					</div>
 				</div>
