--- a/yes-we-can-build-your-app.html
+++ b/yes-we-can-build-your-app.html
@@ -5,7 +5,7 @@
 	<title>We Will Build Your Next App</title>
 	<meta name="description" content="At Dapper Gentlemen we will build your next award-winning, professional, uniquley disruptive app!">
 	<link rel="stylesheet" href="style/css/style.css">
-	<link href='http://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Unica+One' rel='stylesheet' type='text/css'>
 </head>
 
@@ -200,7 +200,7 @@
 				<!-- CHAT BUBBLE -->
 					<div class="flex2 pad20--bottom">
 						<div class="flex1 brown__bg--85 vertical-center border-radius10 pad10">
-						<h1 class="unica-one h1-main brown__color--20">Yes! We will build your app!</h1>
+						<h1 class="chat-font h1-main brown__color--20">Yes! We will build your app!</h1>
 						</div>
 					</div>
 				<!-- SVG - RYAN -->
@@ -386,10 +386,10 @@
 				<!-- LEFT COLUMN -->
 					<div class="flex2 column">
 						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="what-kind-of-apps-do-you-make.html">
-							<p class="vollkorn choice-fontsize blue__color--85">Are your apps magical?</p>
+							<p class="choice-font choice-fontsize blue__color--85">Are your apps magical?</p>
 						</a>
 						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="adventure.html">
-							<p class="vollkorn choice-fontsize blue__color--85">What's the adventure?</p>
+							<p class="choice-font choice-fontsize blue__color--85">What's the adventure?</p>
 						</a>
 					</div>
 				<!-- SVG - SELECTOR -->
@@ -423,7 +423,7 @@
 				<!-- RIGHT COLUMN -->
 					<div class="flex2 column">
 						<a class="flex1 blue__bg--40 margin3 blue__drop-shadow--20 border-radius5 horizontal-center vertical-center blue__hover--35" href="lets-get-started.html">
-							<p class="vollkorn choice-fontsize blue__color--85">Let's do this.</p>
+							<p class="choice-font choice-fontsize blue__color--85">Let's do this.</p>
 						</a>
 					</div>
 				</div>
